<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_cases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <!--    active cases-->
            <LinearLayout
                android:id="@+id/layout_active_cases"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:background="#DADADA"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccent"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/activeCases"
                            android:textColor="@color/white"
                            android:textSize="28sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/active_case_patient"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text=""
                                android:textColor="@color/black"
                                android:textSize="28sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/currently_infected_patients"
                                android:textSize="15sp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">


                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/active_case_condition"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="serif"
                                        android:gravity="center"
                                        android:paddingTop="10dp"
                                        android:text=""
                                        android:textColor="@color/mild_condition"
                                        android:textSize="28sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/active_case_condition_percentage"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="serif"
                                        android:gravity="center"
                                        android:paddingTop="10dp"
                                        android:text="" />


                                </LinearLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/in_mild_condition"
                                    android:textColor="@color/black"
                                    android:textSize="15sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/active_case_critical"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="serif"
                                        android:gravity="center"
                                        android:paddingTop="10dp"
                                        android:text=""
                                        android:textColor="@color/criticalRed"
                                        android:textSize="28sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/active_case_critical_percentage"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="serif"
                                        android:gravity="center"
                                        android:paddingTop="10dp"
                                        android:text="" />


                                </LinearLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/serious_or_critical"
                                    android:textColor="@color/black"
                                    android:textSize="15sp" />

                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <!--    closed cases-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_below="@+id/layout_active_cases"
                android:background="#DADADA"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccent"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/closedCases"
                            android:textColor="@color/white"
                            android:textSize="28sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/closed_case_outcome"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text=""
                                android:textColor="@color/black"
                                android:textSize="28sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/cases_which_had_an_outcome"
                                android:textSize="15sp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">


                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/closed_case_recovered"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="serif"
                                        android:gravity="center"
                                        android:paddingTop="10dp"
                                        android:text=""
                                        android:textColor="#06C60E"
                                        android:textSize="28sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/closed_case_recovered_percentage"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="serif"
                                        android:gravity="center"
                                        android:paddingTop="10dp"
                                        android:text="" />


                                </LinearLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/recoveredDischarged"
                                    android:textColor="@color/black"
                                    android:textSize="15sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/closed_case_death"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="serif"
                                        android:gravity="center"
                                        android:paddingTop="10dp"
                                        android:text=""
                                        android:textColor="@color/red"
                                        android:textSize="28sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/closed_case_death_percentage"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="serif"
                                        android:gravity="center"
                                        android:paddingTop="10dp"
                                        android:text="" />


                                </LinearLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/deaths"
                                    android:textColor="@color/black"
                                    android:textSize="15sp" />

                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>